# probe-arc3-worldmodel

./: .gitignore  LICENSE
arc-world-model/: .env.example  EXPERIMENTS.md  LICENSE  Makefile  README.md  WEEK_1_TASKS.md  pyproject.toml
arc-world-model/arcwm/: __init__.py
arc-world-model/arcwm/models/: rssm.py  vae.py
arc-world-model/arcwm/planning/: __init__.py
arc-world-model/arcwm/training/: __init__.py
arc-world-model/data/: human_baselines.json
arc-world-model/environment_files/ft09/0d8bbf25/: metadata.json
arc-world-model/environment_files/ls20/9607627b/: metadata.json
arc-world-model/notebooks/: 00_playing_notes.md  01_sdk_exploration.ipynb
arc-world-model/scripts/: collect_data.py  fetch_baselines.py  train_world_model.py
arc-world-model/tasks/: WEEK_1_COMPLETION.md
arc-world-model/tests/: test_env.py  test_replay_buffer_resume.py
